<resources>
    <string name="app_name">Travoca</string>
    <string name="location_chooser_text">Current Location</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <plurals name="records_count_available">
        <item quantity="one">We found one match</item>
        <item quantity="other">We found <b>%d</b> matches</item>
    </plurals>
    <string name="record_price_per_night">%1$s per night</string>
    <string name="datepicker_select">SELECT</string>
    <string name="confirmation">Confirmation</string>
    <string name="special_free_cancellation">Free Cancellation</string>
    <string name="special_breakfast_included">Breakfast Included</string>
    <string name="terms_and_condition">I agree to the travoca <a href="http://www.travoca.com/en/disclaimer/?amu=280825437">Terms &amp; Conditions</a> and <a href="http://www.travoca.com/en/privacy/?amu=280825437">Privacy &amp; Cookies</a> by making the reservation</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="loading_more">Loading more…</string>
    <string name="anonymous">Anonymous</string>
    <string name="apply">Apply</string>
    <string name="check_in_caps">CHECK-IN</string>
    <string name="check_out_caps">CHECK-OUT</string>
    <string name="current_location">Current Location</string>
    <string name="sort_by">Sort by…</string>
    <string name="android_pay">Android Pay</string>
    <string name="use_secure_connection">We use a secure connection and encrypted storage to protect your personal information</string>
    <string name="booking_confirmed"><![CDATA[Dear <b>%s</b>, thank you.<br>Your booking is <font color="#21C097"> confirmed </font>.]]></string>
    <string name="booking_cancel"><![CDATA[Dear <b>%1$s</b>, thank you.<br>Your booking is <font color="#CB4D00"> <b>%2$s</b> </font>.]]></string>
    <string name="booking_information">Booking Information</string>
    <string name="title_activity_booking_summary">Booking Details</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="select_currency">Select currency</string>
    <string name="free_cancellation">Free cancellation</string>
    <string name="non_refundable">Non-refundable</string>
    <string name="lowest_price">Lowest price</string>
    <string name="see_all_records_for_this_location">View all records for this location</string>
    <string name="book_now">Book Now</string>
    <string name="settings_about">About</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="view_available_rooms">View all available rooms</string>
    <string name="show_landmarks">Show landmarks within 1km</string>
    <string name="check_in_less_than_today_worning">Check-in cannot be before today</string>
    <string name="modify_preferences">Change dates</string>
    <string name="show_price">Show price</string>
    <string name="price_per_night">Per night</string>
    <string name="price_per_stay">Per stay</string>
    <string name="my_booking">My booking</string>
    <string name="setting">Setting</string>
    <string name="title_activity_login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot you password?</string>
    <string name="title_activity_new_record">New record</string>
    <string name="mainnav_recent_search">Recent Searches</string>
    <string name="mainnav_favorites">Favorites</string>
    <string name="mainnav_creditcards">Credit Cards</string>
    <string name="mainnav_profile">Profile</string>
    <string name="mainnav_code_scanner">QR Scan</string>
    <string name="mainnav_login">Login</string>
    <string name="mainnav_contribute">Recorder mode</string>
    <string name="mainnav_settings">Settings</string>
    <string name="open_with">Open page with</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up_terms_and_condition">By clicking Sign Up, you are agree with our <a href="http://www.travoca.com/en/disclaimer/?amu=280825437">Terms &amp; Conditions</a> and <a href="http://www.travoca.com/en/privacy/?amu=280825437">Privacy Policy</a></string>
    <string name="receive_deals_emails">I\'d like to receive exclusive deals and personalized recommendations via email</string>
    <string name="tab_title_login">LOGIN</string>
    <string name="tab_title_sign_up">SIGN UP</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>
    <string name="signup_message">Thank you for signing up. Please check your email to activate your account</string>
    <string name="signup_confirm_message">Your account is activated. You will be logged in</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone number</string>
    <string name="femaie">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="personal_information">Personal Information</string>
    <string name="save">Save</string>
    <string name="recent_searched">Recent Searches</string>
    <string name="language">Language</string>
    <string name="select_language">Select language</string>
    <string name="allow_notification">Allow notification</string>
    <string name="manage_confirmed_booking">View details</string>
    <string name="favorites">Favorites</string>
    <string name="manage_your_reservation">Manage your reservation</string>
    <string name="booking_important_information">Important Information</string>
    <string name="contact_us">Contact us</string>
    <string name="done">Done</string>
    <string name="add_more_booking">Add existing booking</string>
    <string name="add">Add</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="details">Details</string>
    <string name="important_information_and_conditions">Important information and conditions</string>
    <string name="need_help_with_booking">Need help or do you have any questions regarding your booking?</string>
    <string name="additional_information">Additional information</string>
    <string name="cancellation_policy">Cancellation policy</string>
    <string name="payment_information">Payment information</string>
    <string name="tax_recovery_charges_and_fees">Tax recovery charge and fees</string>
    <string name="payment_completed">You have completed the payment for this booking.\n\nCharges appear as one of the following:\n- TSP*EASYTOBOOK \n- TRAVRES*TRAVEL RES NL \n- TSP*HOTELRES \n- EASYTOBOOK</string>
    <string name="payment_pending">In order to validate the pending booking, the credit card or PayPal account has been charged. If the pending booking is unfortunately cancelled, the charge will be immediately refunded. If the booking is confirmed, the charge will remain.\n\n Charges appear as one of the following:\n - TSP*EASYTOBOOK \n - TRAVRES*TRAVEL RES NL \n - TSP*HOTELRES \n - EASYTOBOOK</string>
    <string name="refundable">Refundable</string>
    <string name="payment_accomodation_charge">The record may charge your card anywhere between today and the day of arrival. If you would like to know more about the payment for this stay, please contact the record directly.\n\nPlease note that we do not charge your credit card.</string>
    <string name="payment_accomodation_preauthorize">Payment at the record.\n\nThe record can pre-authorize your card before arrival; they check for sufficient funds in order to guarantee your booking.</string>
    <string name="fill_in_destination">Fill in a destination or address</string>
    <string name="delete">Delete</string>
    <string name="reset_search">Reset search</string>
    <string name="retry_connecting_server">Retry connecting to the server</string>
    <string name="unable_connect_server">Unable connect the server, please check your internet connection</string>
    <string name="price_range">Price Range</string>
    <string name="star_rating">Star Rating</string>
    <string name="guest_rating">Guest Rating</string>
    <string name="choose_location">Please choose a location</string>
    <string name="discount">%d%% Discount</string>
    <string name="reservation_problem">Reservation Problem</string>
    <string name="cps_details">DETAILS</string>
    <string name="cps_map">MAP</string>
    <string name="reservation_cancelled">Reservation cancelled.</string>
    <string name="reservation_didnt_cancelled_unknown_error">Reservation didn\'t cancelled, Unknown error</string>
    <string name="not_implemented">Not implemented… Stay tuned!</string>
    <string name="could_not_connect_to_google">"Could not connect to Google API Client: Error "</string>
    <string name="record_not_available">We are sorry, the record is no longer available</string>
    <string name="you_are_offline">You are offline</string>
    <string name="booking_or_password_not_match">Booking number not found or the password not match</string>
    <string name="you_logged_out">You logged out</string>
    <string name="cannot_confirm_token">Cannot confirm token</string>
    <string name="no_dates_selected">No Dates selected</string>
    <string name="select_dates">Select Dates</string>
    <string name="cannot_retrieve_order">Cannot retrieve order</string>
    <string name="login_error">There was an error during Login</string>
    <string name="profile_error">Cannot retrieve profile details</string>
    <string name="remove_landmarks">Remove landmarks</string>
    <string name="nothing_to_show_in_this_area">Nothing to show in this area</string>
    <string name="pay_today">Today you will pay</string>
    <string name="pay_at_accommodation">Pay at record</string>
    <string name="max_guests">%d Max</string>
    <string name="no_pois">There is no known Points of interest known to us in this location</string>
    <string name="note_guest_per_room">"Selected %1$d rooms with %2$d guest each"</string>
    <string name="bad_internet_connection">• Bad Internet connection</string>
    <string name="not_published_yet">• you didn\'t published any record yet</string>
    <string name="several_reasons">This could have happened for several reasons.</string>
    <string name="currently_no_available">There are currently no records available for your chosen preferences</string>
    <string name="staying_at">Staying at %s</string>
    <string name="share_booking">share booking</string>
    <string name="add_to_calender">add to calender</string>
    <string name="share_text">Hi, I just booked a place to stay in %1$s, %2$s from %3$s to %4$s via http://www.travoca.com
        \n\nReview and manage the booking: https://secure.travoca.com/mybooking/index.php?br=%5$s&amp;pc=%6$s
        \n\nCheck out our Android and Iphone apps here: http://www.travoca.com/mobile/download.php</string>
    <string name="add_to_calender_note_text"> "Manage the booking https://secure.travoca.com/mybooking/index.php?br=%1$s&amp;pc=%2$s</string>
    <string name="note">Note</string>
</resources>