<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:clipToPadding="false"
        android:orientation="vertical"

        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/group_buttons_holder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/instructions"
                    fontPath="@string/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/minimum_default_padding"
                    android:layout_marginRight="@dimen/minimum_default_padding"
                    android:layout_marginTop="@dimen/home_instructions_margin"
                    android:shadowColor="#000000"
                    android:shadowRadius="20"
                    android:text="@string/fill_in_destination"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:ignore="MissingPrefix" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/minimum_default_padding">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView_location"
                        style="@style/HotelsAppTheme.Widget.AutocompleteView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/default_padding"
                        android:drawableStart="@drawable/current_location"
                        android:hint="@string/location_chooser_text" />

                    <ImageButton
                        android:id="@+id/autoCompleteTextView_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right|center_vertical"
                        android:background="@android:color/transparent"
                        android:padding="@dimen/default_padding"
                        android:src="@drawable/btn_close"
                        android:visibility="gone" />

                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/minimum_default_padding">


            </LinearLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            </FrameLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/search"
        style="@style/HotelsAppTheme.Widget.AccentBottomButton"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_button_height"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/search" />

</FrameLayout>